# swappy

./: .gitignore  BUN_SETUP.md  CLAUDE.md  INTEGRATION_TODO.md  README.md  bun-dev.bat  bun-dev.sh  bun-workspace.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.js  rust-demo.html  tailwind.config.js  test-video-functionality.md  video-loading-debug-attempts.md  vite.config.js  vite.config.js.timestamp-1750236322366-c71776a1aa333.mjs
.cursor/rules/: project-structure.mdc  svelte-5-syntax.mdc  technology-stack.mdc
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: handlers.rs
backend/src/models/: mod.rs  models.rs
backend/src/services/: audio_service.rs  mod.rs  video_service.rs
backend/uploads/videos/: 172b2916-ad91-4d10-a806-6d924ef3667c  1b7e31a3-c048-488c-b3c2-071030e5183d  225051e1-df92-4e77-b613-78d8046b8e61  3b3e80b0-b64e-4781-92a1-5429d7cc4bff  746e5b5d-e142-4235-b9c4-2a8e397aea12  7ff839b8-89c8-4293-a554-558ed509121c  87a7d921-b816-4673-ab6b-9060b08f4e1c  88e22388-58d5-4396-8978-0649342e2298  a4c22c43-db08-45d1-bf3e-e7bdc71910e6  aa733e0f-4bfa-414c-bf88-b11b9fc574a8  b4ae8fa8-03af-45d9-9053-c0144289da0d  b639fe93-2890-4bd0-9494-99c7d3059384  baaba8d5-9f6b-4515-b59f-88ec547b04c1  cf3e8676-d097-45ee-9b0d-79507ecaf6f8  f5c3fb28-bdc2-4bc2-b242-fe31f110c759
frontend/: package.json  vite.config.js
frontend/src/: app.css
frontend/src/lib/services/: audio.ts  ffmpeg.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/editor/: +page.svelte
lib/video/: video-codecs.js
src/: App.svelte  AudioAnalyzerEnhanced.svelte  AudioFileManager.svelte  AudioTimeline.svelte  AudioVisualizer.svelte  EnhancedAudioFileManager.svelte  ExportDialog.svelte  Markers.svelte  VideoEditor.svelte  VideoPlayer.svelte  app.css  ffmpegService.js  main.js
src/lib/components/audio/: AudioVisualizer.svelte
src/lib/components/video/: VideoEffects.svelte  VideoPlayer.svelte
src/lib/services/: audio.js  ffmpeg.js
src/routes/: +layout.svelte  +page.svelte
src/routes/editor/: +page.svelte
src/video/: ShaderVideoPlayer.svelte
swappy-rust/: Cargo.toml
swappy-rust/src/: handlers.rs  main.rs  models.rs
swappy-rust/src/services/: audio_service.rs  video_service.rs
(+2 files in other folders)
