[package]
name = "swappy-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "limit"] }
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File handling and multipart
multer = "3.0"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Video processing (commented out until system deps are installed)
# ffmpeg-next = "7.0"

# Audio analysis
rustfft = "6.1"
hound = "3.5"

# Async and utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
lazy_static = "1.4"

# Image processing for thumbnails
image = "0.24"

# Database (SQLite for simplicity)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# Audio processing
symphonia = { version = "0.5", features = ["mp3", "wav", "aac", "isomp4", "mkv"] }

# Error handling
thiserror = "1.0"

# Added from the code block
once_cell = "1.19"
bytes = "1.5"

[dev-dependencies]
tokio-test = "0.4"
