[package]
name = "swappy-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "limit"] }
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File handling and multipart
multer = "3.0"
uuid = { version = "1.0", features = ["v4"] }

# Video processing (commented out until system deps are installed)
# ffmpeg-next = "7.0"

# Audio analysis
rustfft = "6.0"
hound = "3.5"

# Async and utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
lazy_static = "1.4"

# Image processing for thumbnails
image = "0.24"

# Database (SQLite for simplicity)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
